// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-component default-alias-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-default-class-export",
    "importedName": "namespace",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-class-export.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "68d46d6964a53de9df203beb8794fb61",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component default-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-default-arrow-func",
    "importedName": "default",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "ceea0565a65f75c8c7b6b355d6d335ac",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component kind-component.js 1`] = `
Object {
  "component": Object {
    "name": "Button",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "f96a7e8142d3ef97c1bdda38ff7a5b92",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component named-alias-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-arrow-func",
    "importedName": "Btn",
    "name": "Button",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "2f4bd34d15be236674abaf6e894afe6e",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component named-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-class",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "996a04cd0627e5de9c21977a04008534",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component node-modules.js 1`] = `
Object {
  "component": Object {
    "from": "theme-ui",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/node_modules/@theme-ui/components/src/Button.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@theme-ui/color-modes": "^0.4.0-rc.5",
      "@theme-ui/components": "^0.4.0-rc.5",
      "@theme-ui/core": "^0.4.0-rc.5",
      "@theme-ui/css": "^0.4.0-rc.5",
      "@theme-ui/mdx": "^0.4.0-rc.5",
      "@theme-ui/theme-provider": "^0.4.0-rc.5",
    },
    "devDependencies": undefined,
    "fileHash": "8f6835169f285fcd3ad5425d9268a8f1",
    "name": "theme-ui",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "0.4.0-rc.5",
  },
}
`;

exports[`extract-component node-modules-source.js 1`] = `
Object {
  "component": Object {
    "from": "@component-controls/components",
    "importedName": "Subtitle",
    "imports": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/node_modules/@component-controls/components/dist/index.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@primer/octicons-react": "^10.0.0",
      "@theme-ui/match-media": "^0.4.0-rc.1",
      "@theme-ui/presets": "^0.4.0-rc.1",
      "copy-to-clipboard": "^3.2.1",
      "fast-memoize": "^2.5.2",
      "markdown-to-jsx": "^6.11.0",
      "mdx-utils": "*",
      "prism-react-renderer": "^1.0.2",
      "react-animate-height": "^2.0.20",
      "react-popper-tooltip": "^3.1.0",
      "react-switch": "^5.0.1",
      "react-table": "^7.0.0",
      "react-tabs": "^3.1.0",
      "scroll-into-view-if-needed": "^2.2.25",
      "theme-ui": "^0.4.0-rc.1",
    },
    "devDependencies": Object {
      "@component-controls/jest-snapshots": "^1.36.7",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@theme-ui/css": "^0.4.0-rc.1",
      "@types/markdown-to-jsx": "^6.11.0",
      "@types/react": "^16.9.34",
      "@types/react-table": "^7.0.10",
      "@types/react-tabs": "^2.3.1",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "react": "^16.13.1",
      "react-dom": "^16.13.1",
    },
    "fileHash": "a8331272bc389f63195926fe6e7dd6d6",
    "name": "@component-controls/components",
    "peerDependencies": Object {
      "@theme-ui/css": ">= 0.4.0-rc.1",
      "react": "^16.8.0 || ^17",
      "react-dom": "^16.8.0 || ^17",
    },
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component non-existing-file.js 1`] = `
Object {
  "component": Object {
    "from": "./Button",
    "importedName": "Btn",
    "name": "Button",
  },
  "componentPackage": undefined,
}
`;

exports[`extract-component parameters-component.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-arrow-func",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "2f4bd34d15be236674abaf6e894afe6e",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;

exports[`extract-component story-component.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-class",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.36.6",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@component-controls/ts-markdown-docs": "^1.21.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "996a04cd0627e5de9c21977a04008534",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {},
    "version": "1.36.7",
  },
}
`;
